--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hello-ts",
   "version": "0.1.0",
   "description": "TypeScript project as primitive as possible",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
