--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TypeScript project as primitive as possible",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
